# SuperAdd2

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: push.yml  push_main.yml
super_add/: __init__.py  test_add.py
tests/: test_add.py
