[tool.poetry]
name = "super_add"
version = "0.0.0"
description = ""
authors = ["Del Middlemiss <derekmiddlemiss@gmail.com>"]
readme = "README.md"


[tool.semantic_release]
version_variable = [
    'super_add/__init__.py:__version__',
    'pyproject.toml:version'
]
branch = 'main'
upload_to_pypy = false
upload_to_release = true
build_command = 'poetry build'

[tool.black]
line-length = 79
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.1"
pytest = "^7.3.1"
python-semantic-release = "^7.33.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
